WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273028
[WebGPU] mapAsync shouldn't be calling getMappedRange on the entire buffer
https://bugs.webkit.org/show_bug.cgi?id=273028
Summary
[WebGPU] mapAsync shouldn't be calling getMappedRange on the entire buffer
Mike Wyrzykowski
Reported
2024-04-20 07:02:59 PDT
[WebGPU] mapAsync shouldn’t be calling getMappedRange on the entire buffer. The buffer could be 1GB for example, but the receiver only wants to read 16 bytes, we would pass 1GB from the GPU process to the web process unnecessarily.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-20 07:03:23 PDT
<
rdar://problem/126800249
>
Mike Wyrzykowski
Comment 2
2024-04-24 11:11:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27702
EWS
Comment 3
2024-05-02 14:52:14 PDT
Committed
278286@main
(065a0ff443f8): <
https://commits.webkit.org/278286@main
> Reviewed commits have been landed. Closing PR #27702 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug