Source/WebCore/Modules/WebGPU/GPUBuffer.cpp
@@ -97,10 +97,10 @@ void GPUBuffer::mapAsync(GPUMapModeFlags mode, std::optional<GPUSize64> offset, 
     });
 }
 
-static auto makeArrayBuffer(auto source, auto byteLength, auto& cachedArrayBuffers, auto& device, auto& buffer)
+static auto makeArrayBuffer(auto source, size_t offset, auto byteLength, auto& cachedArrayBuffers, auto& device, auto& buffer)
 {
     auto arrayBuffer = ArrayBuffer::create(source, byteLength);
-    cachedArrayBuffers.append({ arrayBuffer.ptr(), reinterpret_cast<uint8_t*>(source) });
+    cachedArrayBuffers.append({ arrayBuffer.ptr(), offset });
     cachedArrayBuffers.last().buffer->pin();
     if (device)
         device->addBufferToUnmap(buffer);
@@ -175,12 +175,12 @@ ExceptionOr<Ref<JSC::ArrayBuffer>> GPUBuffer::getMappedRange(std::optional<GPUSi
     if (!mappedRange.source) {
         m_arrayBuffers.clear();
         if (m_mappedAtCreation || !size)
-            return makeArrayBuffer(static_cast<size_t>(0U), 1, m_arrayBuffers, m_device, *this);
+            return makeArrayBuffer(static_cast<size_t>(0U), 0, 1, m_arrayBuffers, m_device, *this);
 
         return Exception { ExceptionCode::OperationError, "getMappedRange failed"_s };
     }
 
-    return makeArrayBuffer(mappedRange.source, size, m_arrayBuffers, m_device, *this);
+    return makeArrayBuffer(mappedRange.source, offset, size, m_arrayBuffers, m_device, *this);
 }
 
 void GPUBuffer::unmap(ScriptExecutionContext& scriptExecutionContext)
@@ -207,15 +207,15 @@ void GPUBuffer::internalUnmap(ScriptExecutionContext& scriptExecutionContext)
     for (auto& arrayBufferAndOffset : m_arrayBuffers) {
         auto& arrayBuffer = arrayBufferAndOffset.buffer;
         if (arrayBuffer && arrayBuffer->data() && arrayBuffer->byteLength()) {
-            memcpy(arrayBufferAndOffset.source, arrayBuffer->data(), arrayBuffer->byteLength());
+            m_backing->copy(arrayBuffer->toVector(), arrayBufferAndOffset.offset);
             JSC::ArrayBufferContents emptyBuffer;
             arrayBuffer->unpin();
             arrayBuffer->transferTo(scriptExecutionContext.vm(), emptyBuffer);
         }
     }
 
-    m_arrayBuffers.clear();
     m_backing->unmap();
+    m_arrayBuffers.clear();
 }
 
 void GPUBuffer::destroy(ScriptExecutionContext& scriptExecutionContext)
